<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012-2014 Jaspersoft Corporation. All rights reserved.
    http://community.jaspersoft.com/project/jaspermobile-android

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is part of Jaspersoft Mobile for Android.

    Jaspersoft Mobile is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Jaspersoft Mobile is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with Jaspersoft Mobile for Android. If not, see
    <http://www.gnu.org/licenses/lgpl>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="70"
        android:showAsAction="always|collapseActionView"
        android:title="@android:string/search_go" />

    <item
        android:id="@+id/switchLayout"
        android:icon="@drawable/ic_collections_view_as_grid"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/r_ab_switch" />

    <item
        android:id="@+id/showFavorites"
        android:icon="@drawable/ic_action_favorites"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/r_ab_favorites" />

    <item
        android:id="@+id/showSettings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/ab_settings" />

</menu>