...
    <string name="nd_drawer_open">open</string>
    <string name="nd_drawer_close">close</string>
    <string name="nd_manage_accounts">Manage accounts</string>
    <string name="nd_select_account">Select Account</string>

    <!-- Home Activity -->
    <string name="h_repository_label">Repository</string>
    <string name="h_library_label">Library</string>

    <!-- Password Dialog -->
    <string name="h_ad_title_server_sign_in">Server sign-in</string>
    <string name="h_ad_label_wrong_password">The username or password is incorrect. Re-enter your credentials.</string>
    <string name="h_ad_label_server_profile">Server Profile</string>
...
    <string name="error_trigger_calendar_pattern_days_in_month" translatable="false">Wrong format for days in the month for calendar recurrence.</string>
    <string name="error_trigger_calendar_pattern_hours" translatable="false">Wrong format for hours in day for calendar recurrence.</string>
    <string name="error_trigger_calendar_pattern_minutes" translatable="false">Wrong format for minutes in hour for calendar recurrence.</string>

    <!-- Others -->
    <string name="loading_msg">Loading…</string>
    <string name="search_result_format">Search results for \'%1$s\'</string>
    <string name="failed_load_data">Failed to load data!</string>
    <string name="authenticator_label">Jasper accounts</string>
    <string name="wrong_action">Can not perform this action</string>
    <string name="no_network">There was a network error.</string>
    <string name="request_was_cancelled_explicitly">Cancelled</string>
    <string name="cancel">Cancel</string>
...
