...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_navigation"
        style="@style/Widget.JasperMobile.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <FrameLayout
            android:id="@+id/tb_custom"
...
